--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,19 @@
 <h2>Sign up</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <%= render 'devise/devise_error_messages' %>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <div class="form-group"><%= f.label :email, class: "control-label" %><br />
+  <%= f.email_field :email, :autofocus => true, placeholder: "PA email", class: "form-control" %></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="form-group"><%= f.label :password, class: "control-label" %><br />
+  <%= f.password_field :password, placeholder: "Password", class: "form-control" %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div class="form-group"><%= f.label :password_confirmation, class: "control-label" %><br />
+  <%= f.password_field :password_confirmation, placeholder: "Password confirmation", class: "form-control" %></div>
+
+  <div><%= f.submit "Sign up", class: "btn btn-lrg btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
