--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,17 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>Welcome</h1>
+
+<p>
+  Welcome to PA Schedule Search! If you have not done so already, please create an account below. Otherwise, sign in to view your schedule.
+</p>
+<br>
+<center>
+  <div class="row">
+    <div class="col-md-6">
+      <%= link_to "Sign up!", new_user_registration_path, class: "btn btn-lg btn-primary" %>
+    </div>
+    <div class="col-md-6">
+      <%= link_to "Sign in!", new_user_session_path, class: "btn btn-lg btn-primary" %>
+    </div>
+  </div>
+</center>
+
