--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -4,9 +4,9 @@
   <%= render "devise/devise_error_messages" %>
 
   <div class="form-group"><%= f.label :email, class: "control-label" %><br />
-  <%= f.email_field :email, :autofocus => true, class: "form-control" %></div>
+  <%= f.email_field :email, :autofocus => true, placeholder: "Email", class: "form-control" %></div>
 
-  <div><%= f.submit "Resend confirmation instructions", class: "btn btn-lrg btn-primary" %></div>
+  <div><%= f.submit "Resend confirmation instructions", class: "btn btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
