--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,8 @@
   <%= render 'devise/devise_error_messages' %>
 
   <div class="form-group"><%= f.label :email, class: "control-label" %><br />
-  <%= f.email_field :email, :autofocus => true, placeholder: "PA email", class: "form-control" %></div>
+  <%= f.email_field :email, :autofocus => true, placeholder: "Email", class: "form-control" %>
+  <p class="help-block">Please use your Andover email address.</p></div>
 
   <div class="form-group"><%= f.label :password, class: "control-label" %><br />
   <%= f.password_field :password, placeholder: "Password", class: "form-control" %></div>
@@ -13,7 +14,7 @@
   <div class="form-group"><%= f.label :password_confirmation, class: "control-label" %><br />
   <%= f.password_field :password_confirmation, placeholder: "Password confirmation", class: "form-control" %></div>
 
-  <div><%= f.submit "Sign up", class: "btn btn-lrg btn-primary" %></div>
+  <div><%= f.submit "Sign up", class: "btn btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
