Make colors nicer

--- a/app/assets/stylesheets/students.css.scss
+++ b/app/assets/stylesheets/students.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .schedule {
-    background-color: rgba(70, 70, 70, 0.1);
+    /* background-color: rgba(70, 70, 70, 0.1);  */
     text-align: center;
     font-size: 8pt;
     
@@ -13,7 +13,7 @@
 }
 
 .per2 td {
-    background: rgba(#BAEDFF, 0.4);
+    background: rgba(#C285FF, 0.4);
 }
 
 .per3 td {
@@ -21,19 +21,19 @@
 }
 
 .per4 td {
-    background: rgba(#FABEAD, 0.4);
+    background: rgba(#FF1337 , 0.4);
 }
 
 .per5 td {
-    background: rgba(#7FFF00, 0.4);
+    background: rgba(#FFA319, 0.4);
 }
 
 .per6 td {
-    background: rgba(#DEADBE, 0.4);
+    background: rgba(#7FFF00, 0.4);
 }
 
 .per7 td {
-    background: rgba(#AEADBA, 0.4);
+    background: rgba(#248F24, 0.4);
 }
 
 .per9 td {
@@ -41,9 +41,9 @@
 }
 
 .fre td {
-    background: rgba(#FAFA0F, 0.4);
+    background: rgba(#FFFF75, 0.3);
 }
 
 .auxiliary td {
-    background: rgba(#FFFFFF, 0.4);
+    background: rgba(#DADADA, 0.4);
 }
