--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -148,6 +148,6 @@
     </table>
   </div>
 </div>
-<div class="col-md-6">
-  These are ugly colors but thats really easy to change.  Also they're transparent so they stack if we're going for that
+<div class="col-md-6" id="sectionBox">
+  <h2>Click a class to see who's in it.</h2>
 </div>
