Add restrictions to viewing sections

--- a/app/views/students/_schBox.html.erb
+++ b/app/views/students/_schBox.html.erb
@@ -15,7 +15,11 @@
 	  <% if arr[3].match(/FREE/) %>
 	  <% else %>
 	  <% sec = Section.find_by(name: arr[0]) %>
-          <%= link_to(arr[0], sec, remote: true) %><br>
+          <% if current_user.email == @student.email %>
+	  <%= link_to(arr[0], sec, remote: true) %><br>
+	  <% else %>
+	  <%= arr[0] %><br>
+	  <% end %>
           <%= arr[1] %><br>
           <%= arr[2] %>
 	  <% end %>
