--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -4,10 +4,10 @@
     <table class="table-condensed; border:none">
       <tr>
         <td style="vertical-align:top">
-	  <table class="table">
-	    <%= render "schBox", arr: @schedule[0] %>
-	    <%= render "schBox", arr: @schedule[1] %>
-	    <tr class="auxiliary">
+          <table class="table">
+            <%= render "schBox", arr: @schedule[0] %>
+            <%= render "schBox", arr: @schedule[1] %>
+            <tr class="auxiliary">
               <td>
                 <div style="height:40px; overflow:hidden">
                   <p>
@@ -17,27 +17,27 @@
                 </div>
               </td>
             </tr>
-	    <%= render "schBox", arr: @schedule[2] %>
-	    <%= render "schBox", arr: @schedule[3] %>
-	    <%= render "schBox", arr: @schedule[4] %>
-	    <%= render "schBox", arr: @schedule[5] %>
-	    <%= render "schBox", arr: @schedule[6] %>
-	    <tr class="auxiliary">
+            <%= render "schBox", arr: @schedule[2] %>
+            <%= render "schBox", arr: @schedule[3] %>
+            <%= render "schBox", arr: @schedule[4] %>
+            <%= render "schBox", arr: @schedule[5] %>
+            <%= render "schBox", arr: @schedule[6] %>
+            <tr class="auxiliary">
               <td>
                 <div style="height:15px; overflow:hidden">
                   Sports etc.
                 </div>
               </td>
             </tr>
-	    <%= render "schBox", arr: @schedule[7] %>
-	    <%= render "schBox", arr: @schedule[8] %>
+            <%= render "schBox", arr: @schedule[7] %>
+            <%= render "schBox", arr: @schedule[8] %>
           </table>
         </td>
         <td style="vertical-align:top">
           <table class="table">
-	    <%= render "schBox", arr: @schedule[9] %>
-	    <%= render "schBox", arr: @schedule[10] %>
-	    <tr class="auxiliary">
+            <%= render "schBox", arr: @schedule[9] %>
+            <%= render "schBox", arr: @schedule[10] %>
+            <tr class="auxiliary">
               <td>
                 <div style="height:40px; overflow:hidden">
                   <p>
@@ -47,29 +47,29 @@
                 </div>
               </td>
             </tr>
-	    <%= render "schBox", arr: @schedule[11] %>
-	    <%= render "schBox", arr: @schedule[12] %>
-	    <%= render "schBox", arr: @schedule[13] %>
-	    <%= render "schBox", arr: @schedule[14] %>
-	    <%= render "schBox", arr: @schedule[15] %>
-	    <tr class="auxiliary">
+            <%= render "schBox", arr: @schedule[11] %>
+            <%= render "schBox", arr: @schedule[12] %>
+            <%= render "schBox", arr: @schedule[13] %>
+            <%= render "schBox", arr: @schedule[14] %>
+            <%= render "schBox", arr: @schedule[15] %>
+            <tr class="auxiliary">
               <td>
                 <div style="height:15px; overflow:hidden">
                   Sports etc.
                 </div>
               </td>
             </tr>
-	    <%= render "schBox", arr: @schedule[16] %>
-	    <%= render "schBox", arr: @schedule[17] %>
+            <%= render "schBox", arr: @schedule[16] %>
+            <%= render "schBox", arr: @schedule[17] %>
           </table>
         </td>
         <td style="vertical-align:top">
           <table class="table">
-	    <%= render "schBox", arr: @schedule[18] %>
-	    <%= render "schBox", arr: @schedule[19] %>
-	    <%= render "schBox", arr: @schedule[20] %>
-	    <%= render "schBox", arr: @schedule[21] %>
-	    <tr class="auxiliary">
+            <%= render "schBox", arr: @schedule[18] %>
+            <%= render "schBox", arr: @schedule[19] %>
+            <%= render "schBox", arr: @schedule[20] %>
+            <%= render "schBox", arr: @schedule[21] %>
+            <tr class="auxiliary">
               <td>
                 <div style="height:80px; overflow:hidden">
                   <p>
@@ -79,15 +79,15 @@
                 </div>
               </td>
             </tr>
-	    <%= render "schBox", arr: @schedule[22] %>
-	    <%= render "schBox", arr: @schedule[23] %>
+            <%= render "schBox", arr: @schedule[22] %>
+            <%= render "schBox", arr: @schedule[23] %>
           </table>
-	</td>
-	<td style="vertical-align:top">
+        </td>
+        <td style="vertical-align:top">
           <table class="table">
-	    <%= render "schBox", arr: @schedule[24] %>
-	    <%= render "schBox", arr: @schedule[25] %>
-	    <tr class="auxiliary">
+            <%= render "schBox", arr: @schedule[24] %>
+            <%= render "schBox", arr: @schedule[25] %>
+            <tr class="auxiliary">
               <td>
                 <div style="height:40px; overflow:hidden">
                   <p>
@@ -97,28 +97,28 @@
                 </div>
               </td>
             </tr>
-	    <%= render "schBox", arr: @schedule[26] %>
-	    <%= render "schBox", arr: @schedule[27] %>
-	    <%= render "schBox", arr: @schedule[28] %>
-	    <%= render "schBox", arr: @schedule[29] %>
-	    <%= render "schBox", arr: @schedule[30] %>
-	    <%= render "schBox", arr: @schedule[31] %>
-	    <tr class="auxiliary">
+            <%= render "schBox", arr: @schedule[26] %>
+            <%= render "schBox", arr: @schedule[27] %>
+            <%= render "schBox", arr: @schedule[28] %>
+            <%= render "schBox", arr: @schedule[29] %>
+            <%= render "schBox", arr: @schedule[30] %>
+            <%= render "schBox", arr: @schedule[31] %>
+            <tr class="auxiliary">
               <td>
                 <div style="height:50px; overflow:hidden">
                   Sports etc.
                 </div>
               </td>
             </tr>
-	    <%= render "schBox", arr: @schedule[32] %>
-	    <%= render "schBox", arr: @schedule[33] %>
+            <%= render "schBox", arr: @schedule[32] %>
+            <%= render "schBox", arr: @schedule[33] %>
           </table>
         </td>
         <td style="vertical-align:top">
           <table class="table">
-	    <%= render "schBox", arr: @schedule[34] %>
-	    <%= render "schBox", arr: @schedule[35] %>
-	    <tr class="auxiliary">
+            <%= render "schBox", arr: @schedule[34] %>
+            <%= render "schBox", arr: @schedule[35] %>
+            <tr class="auxiliary">
               <td>
                 <div style="height:40px; overflow:hidden">
                   <p>
@@ -128,20 +128,20 @@
                 </div>
               </td>
             </tr>
-	    <%= render "schBox", arr: @schedule[36] %>
-	    <%= render "schBox", arr: @schedule[37] %>
-	    <%= render "schBox", arr: @schedule[38] %>
-	    <%= render "schBox", arr: @schedule[39] %>
-	    <%= render "schBox", arr: @schedule[40] %>
-	    <tr class="auxiliary">
+            <%= render "schBox", arr: @schedule[36] %>
+            <%= render "schBox", arr: @schedule[37] %>
+            <%= render "schBox", arr: @schedule[38] %>
+            <%= render "schBox", arr: @schedule[39] %>
+            <%= render "schBox", arr: @schedule[40] %>
+            <tr class="auxiliary">
               <td>
                 <div style="height:15px; overflow:hidden">
                   Sports etc.
                 </div>
               </td>
             </tr>
-	    <%= render "schBox", arr: @schedule[41] %>
-	    <%= render "schBox", arr: @schedule[42] %>
+            <%= render "schBox", arr: @schedule[41] %>
+            <%= render "schBox", arr: @schedule[42] %>
           </table>
         </td>
       </tr>
@@ -149,13 +149,19 @@
   </div>
   <h3>Other Commitments:</h3>
   <% @student.commitments.each do |c| %>
- <p> <%= link_to(commitment_string(c), c, remote: true) %></p>
+  <p>
+    <% if current_user.email == @student.email %>
+    <%= link_to(commitment_string(c), c, remote: true) %>
+    <% else %>
+    <%= commitment_string(c) %>
+    <% end %>
+  </p>
   <% end %>
 </div>
 <div class="col-md-6" id="sectionBox">
   <% if current_user.email == @student.email %>
   <h2>Click a class to see who's in it.</h2>
   <% else %>
-  
+
   <% end %>
 </div>
