--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome <%= @email %>!</p>
+<p>Welcome <%= name @email %>!</p>
 
 <p>You can confirm your account email through the link below:</p>
 
