--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -22,9 +22,10 @@
   <div><%= f.submit "Update", class: "btn btn-primary" %></div>
 <% end %>
 
-<!--
+</div><div class="well">
+
 <h3>Delete my account</h3>
 
-<p>Unhappy? <%= button_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, class: "btn btn-primary" %></p>
--->
-<%= link_to "Back", :back %>
+<p>You will be able to create a new account for your email address normally. <%= button_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, class: "btn btn-primary" %></p>
+
+<%= link_to "Back to my schedule", root_path %>
