--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -150,7 +150,7 @@
 </div>
 <div class="col-md-6" id="sectionBox">
   <% if current_user.email == @student.email %>
-  <h2>Click a class to see who's in it.</h2>
+  <h2>Click a class to view its roster.</h2>
   <% else %>
   
   <% end %>
