--- a/app/views/sections/_section.html.erb
+++ b/app/views/sections/_section.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @section.name %></h1>
-<% @section.students.each do |s| %>
+
+<% @students.each do |s| %>
 <p><%= render s %></p>
 <% end %>
+<%= paginate @students, remote: true %>
 
