--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @section.name %></h1>
-<% @section.students.each do |s| %>
+<% @students.each do |s| %>
 <p><%= s.full_name %> - <%= s.grad_year %></p>
 <% end %>
