--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Students#index</h1>
-<p>Find me in app/views/students/index.html.erb</p>
+<h1>Search Results</h1>
+<% @students.each do |s| %>
+<p><%= render s %></p>
+<% end %>
