--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @student.full_name %></h1>
-<div class="col-md-7">
+<% if current_user.email == @student.email %>
+<div class="col-md-8">
+<% else %>
+<div class="col-md-8 col-md-offset-2">
+<% end %>
   <div class="schedule">
     <table class="schCol table-condensed; border:none" width="100%">
       <tr>
@@ -168,10 +172,10 @@
   </p>
   <% end %>
 </div>
+<% if current_user.email == @student.email %>
 <div class="col-md-4" id="sectionBox">
-  <% if current_user.email == @student.email %>
   <h2>Click a class to view its roster.</h2>
-  <% else %>
-
-  <% end %>
 </div>
+
+<%= link_to @kit %>
+<% end %>
