--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome <%= name @email %> to PA Schedule Search!</p>
+<p>Welcome <%= @email.split('@')[0] %> to PA Schedule Search!</p>
 
 <p>You can confirm your account through the link below:</p>
 
