Changed schedule width back to a col-md-7

--- a/app/views/students/_schBox.html.erb
+++ b/app/views/students/_schBox.html.erb
@@ -30,7 +30,7 @@
 	  <% else %>
 	  <%= arr[0] %><br>
 	  <% end %>
-          <%= arr[1] %><br>
+          <%= shorten_name arr[1] %><br>
           <%= arr[2] %>
 	  <% end %>
 	</p>
