--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -1,3 +1,8 @@
+
+$screen-xs-max: 0px;
+$screen-sm-min: 1px;
+//$font-size-base: 10px;
+
 // import the CSS framework
 @import "bootstrap";
 
@@ -43,3 +48,26 @@ section {
   @extend .row;
   margin-top: 20px;
   }
+
+/* typography */
+
+h1, h2 {
+  text-align: center;
+}
+
+/* forms */
+
+#error_explanation { 
+  color: #f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
+
+.field_with_errors {
+  display: inline;
+  @extend .has-error;
+}
+
+.navbar-search{max-width: 250px;}
