--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -23,8 +23,13 @@
       <ul class="nav navbar-nav navbar-right">
     	<% if user_signed_in? %>
     	  <li><p class="navbar-text">Signed in as <%= current_name %></p></li>
-    	  <li><%= link_to "Account settings", edit_user_registration_path %></li>
-          <li><%= link_to "Sign out", destroy_user_session_path, method: "delete" %></li>
+	  <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
+	    <ul class="dropdown-menu">
+    	      <li><%= link_to "Account settings", edit_user_registration_path %></li>
+              <li><%= link_to "Sign out", destroy_user_session_path, method: "delete" %></li>
+	    </ul>
+	  </li>
     	<% end %>
       </ul>
     </div>
