--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,8 +1,9 @@
 <% if current_user.email == @student.email %>
 <h1><%= @student.full_name %></h1>
-<div class="col-md-7">
+<center> <%= link_to "Download Schedule", student_path(@student, format: :png) %> </center> <br>
+<div class="col-md-6">
 <% else %>
-<div class="col-md-7 col-md-offset-2">
+<div class="col-md-6 col-md-offset-3">
 <h1><%= @student.full_name %></h1>
 <% end %>
   <div class="schedule">
@@ -174,9 +175,7 @@
   <% end %>
 </div>
 <% if current_user.email == @student.email %>
-<div class="col-md-5" id="sectionBox">
+<div class="col-md-6" id="sectionBox">
   <h2>Click a class to view its roster.</h2>
 </div>
-
-<%= link_to "Download Schedule", student_path(@student, format: :png) %>
 <% end %>
