--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,7 +22,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
     	<% if user_signed_in? %>
-    	  <li><p class="navbar-text">Signed in as <%= current_name %></p></li>
+    	  <li><p class="navbar-text">Signed in as <%= current_user.email.split('@')[0] %></p></li>
 	  <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
 	    <ul class="dropdown-menu">
