--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,6 +1,6 @@
 <%# navigation styled for Bootstrap 3.0 %>
 
-<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse">
   <div class="container">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -9,17 +9,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
+    </div>
+    <div class="collapse navbar-collapse">
       <% if Student.find_by(email: current_user.email) %>
         <%= link_to "My schedule", Student.find_by(email: current_user.email), class: 'navbar-brand' %>
       <% end %>
       <%= form_tag students_path, method: "get", class: "navbar-form navbar-left navbar-search" do %>
-      <div class="input-group"><%= text_field_tag :search, nil, placeholder: "Search", class: "form-control", id: "search" %><span class="input-group-btn"><button class="btn btn-default" name="commit" type="submit"><span class="glyphicon glyphicon-search"></span></button></span></div>
+        <div class="input-group"><%= text_field_tag :search, nil, placeholder: "Search", class: "form-control", id: "search" %><span class="input-group-btn"><button class="btn btn-default" name="commit" type="submit"><span class="glyphicon glyphicon-search"></span></button></span></div>
       <% end %>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav">
-        <%= render 'layouts/navigation_links' %>
-      </ul>
       <ul class="nav navbar-nav navbar-right">
     	<% if user_signed_in? %>
     	  <li><p class="navbar-text">Signed in as <%= current_user.email.split('@')[0] %></p></li>
