I LIED. HTML titles are now implemented.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -7,10 +7,10 @@
   <br>
   <center>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
 	<%= link_to "Sign up!", new_user_registration_path, class: "btn btn-lg btn-primary" %>
       </div>
-      <div class="col-md-6">
+      <div class="col-md-6 col-xs-6 col-sm-6 col-lg-6">
 	<%= link_to "Sign in!", new_user_session_path, class: "btn btn-lg btn-primary" %>
       </div>
     </div>
@@ -19,6 +19,6 @@
   <h1>Welcome Faculty & Staff!</h1>
 
   <p>
-    Unfortunately, this program does not yet support searching for faculty schedules. However, you can search for students' schedules.
+    Unfortunately, this program does not yet support searching for faculty schedules. However, you can still search for students' schedules.
   </p>
 <% end %>
