--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,4 +1,5 @@
-<h2>Resend confirmation instructions</h2>
+<% provide :title, "Resend Confirmation Instructions" %>
+<h2>Resend Confirmation Instructions</h2>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= render "devise/devise_error_messages" %>
