--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Hello <%= @resource.email.split('@')[0] %>!</p>
 
 <p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
