--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,17 @@
-<h2>Change your password</h2>
+<% provide :title, "Change Your Password" %>
+<h2>Change Your Password</h2>
 
 <%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= render 'devise/devise_error_messages' %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-  <%= f.password_field :password, :autofocus => true %></div>
+  <div class="form-group"><%= f.label :password, "New password", class: "control-label" %><br />
+  <%= f.password_field :password, :autofocus => true, placeholder: "New password", class: "form-control" %></div>
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div class="form-group"><%= f.label :password_confirmation, "Confirm new password", class: "control-label" %><br />
+  <%= f.password_field :password_confirmation, placeholder: "Password confirmation", class: "form-control" %></div>
 
-  <div><%= f.submit "Change my password" %></div>
+  <div><%= f.submit "Change my password", class: "btn btn-primary" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
