--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,8 +1,7 @@
 <html>
-
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Schedule Search" %></title>
+    <title><%= content_for?(:title) ? "Schedule Search | " + yield(:title) : "Schedule Search" %></title>
     <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Schedule Search" %>">
     <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
     <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
