--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,4 @@
+<% provide :title, "About" %>
 <h2>About PA Schedule Search</h2>
 
 <p> This website is based off of an original application developed by Clifford Ressel, Jake Herman, and Jamie Bloxham in summer 2013 which produced a list of rosters for all classes in the school. Due to concerns that potentially anyone, even parties unaffiliated with Phillips Academy, would be able to access it, the output file of this program was never publicly posted until a similar program was developed by a third party that produced an identical roster file. </p>
