--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,6 @@
+<% provide :title, "Search Results" %>
 <h1>Search Results</h1>
+<%= "No students match your search terms" if @students.size == 0 %>
 <% @students.each do |s| %>
 <p><%= render s %></p>
 <% end %>
