--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,7 +13,7 @@
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
 	<li>
-	  <% if Student.find_by(email: current_user.email) %>
+	  <% if user_signed_in? and Student.find_by(email: current_user.email) %>
           <%= link_to "My schedule", Student.find_by(email: current_user.email), class: 'navbar-brand' %>
 	  <% end %>
 	</li>
