--- a/app/views/students/_schBox.html.erb
+++ b/app/views/students/_schBox.html.erb
@@ -25,7 +25,7 @@
 	  <% if arr[3].match(/FREE/) %>
 	  <% else %>
 	  <% sec = Section.find_by(name: arr[0]) %>
-          <% if current_user.email == @student.email %>
+          <% if user_signed_in? and current_user.email == @student.email %>
 	  <%= link_to(arr[0], sec, remote: true) %><br>
 	  <% else %>
 	  <%= arr[0] %><br>
