--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,25 +12,33 @@
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-	<li>
-	  <% if user_signed_in? and Student.find_by(email: current_user.email) %>
+        <li>
+          <% if user_signed_in? and Student.find_by(email: current_user.email) %>
           <%= link_to "My schedule", Student.find_by(email: current_user.email), class: 'navbar-brand' %>
-	  <% end %>
-	</li>
+          <% end %>
+        </li>
       </ul>
-      <%= form_tag students_path, method: "get", class: "navbar-form navbar-left navbar-search" do %>
-        <div class="input-group"><%= text_field_tag :search, nil, placeholder: "Search", class: "form-control", id: "search" %><span class="input-group-btn"><button class="btn btn-default" name="commit" type="submit"><span class="glyphicon glyphicon-search"></span></button></span></div>
+      <%= form_tag search_index_path, method: "get", 
+	  class: "navbar-form navbar-left navbar-search" do %>
+         <div class="input-group" id="search-bar">
+           <%= text_field_tag :search, nil, placeholder: "Search", class: "form-control typeahead", id: "search", type: "text" %>
+           <span class="input-group-btn">
+             <button class="btn btn-default" name="commit" type="submit">
+               <span class="glyphicon glyphicon-search"></span>
+             </button>
+           </span>
+         </div>
       <% end %>
       <ul class="nav navbar-nav navbar-right">
-    	<% if user_signed_in? %>
-	  <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%= current_user.email.split('@')[0] %> <b class="caret"></b></a>
-	    <ul class="dropdown-menu">
-    	      <li><%= link_to "Account settings", edit_user_registration_path %></li>
-              <li><%= link_to "Sign out", destroy_user_session_path, method: "delete" %></li>
-	    </ul>
-	  </li>
-    	<% end %>
+        <% if user_signed_in? %>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Signed in as <%= current_user.email.split('@')[0] %> <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><%= link_to "Account settings", edit_user_registration_path %></li>
+            <li><%= link_to "Sign out", destroy_user_session_path, method: "delete" %></li>
+          </ul>
+        </li>
+        <% end %>
       </ul>
     </div>
   </div>
