Updated welcome page for schedule-less users

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -16,9 +16,9 @@
     </div>
   </center>
 <% else %>
-  <h1>Welcome Faculty & Staff!</h1>
+  <h1>Welcome!</h1>
 
   <p>
-    Unfortunately, this program does not yet support searching for faculty schedules. However, you can still search for students' schedules.
+    We can't display your schedule right now. This could be because it is not yet available on PANet, or because you are not a student. Note that it may take some time for the site to load your schedule into its database after it has been released on PANet. However, you can still use this site in the meantime to view other schedules and class rosters.
   </p>
 <% end %>
