--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -4,6 +4,7 @@
 //$font-size-base: 10px;
 
 // import the CSS framework
+@import "bootstrap-sprockets";
 @import "bootstrap";
 
 // make all images responsive by default
