Give all schedules full access and improve search icon alignment

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -22,7 +22,7 @@
 	  class: "navbar-form navbar-left navbar-search" do %>
          <div class="input-group" id="search-bar">
            <%= text_field_tag :search, nil, placeholder: "Search", class: "form-control typeahead", id: "search", type: "text" %>
-           <span class="input-group-btn">
+           <span class="input-group-btn" style="vertical-align: top">
              <button class="btn btn-default" name="commit" type="submit">
                <span class="glyphicon glyphicon-search"></span>
              </button>
